WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31159
Fix branchDouble behaviour on ARM JIT.
https://bugs.webkit.org/show_bug.cgi?id=31159
Summary
Fix branchDouble behaviour on ARM JIT.
Zoltan Herczeg
Reported
2009-11-05 03:09:02 PST
BranchDouble behaviour is reworked on x86, and all jit ports should follow the new, clean behaviour See
bug 31104
and
bug 31151
Attachments
proposed patch
(5.88 KB, patch)
2009-11-05 05:59 PST
,
Zoltan Herczeg
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Herczeg
Comment 1
2009-11-05 05:59:25 PST
Created
attachment 42565
[details]
proposed patch
Gavin Barraclough
Comment 2
2009-11-05 15:44:20 PST
Comment on
attachment 42565
[details]
proposed patch Huh, I guess I just don't think like an ARM programmer yet - hadn't thought of the predicated compare, that's neat, will be stealing that for ARMv7 too. ;-) r+.
Csaba Osztrogonác
Comment 3
2009-11-05 23:29:23 PST
(In reply to
comment #2
) Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/assembler/ARMAssembler.h Sending JavaScriptCore/assembler/MacroAssemblerARM.h Transmitting file data ... Committed revision 50593.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug