https://bugs.webkit.org/show_bug.cgi?id=31159 Fix branchDouble behaviour on ARM THUMB2 JIT.

Patch by Zoltan Herczeg <zherczeg@inf.u-szeged.hu> on 2009-11-05
Reviewed by Gavin Barraclough.

The x86 branchDouble behaviour is reworked, and all JIT
ports should follow the x86 port. See bug 31104 and 31151

This patch contains a fix for the traditional ARM port

* assembler/ARMAssembler.h:
(JSC::ARMAssembler::):
(JSC::ARMAssembler::fmrs_r):
(JSC::ARMAssembler::ftosid_r):
* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::):
(JSC::MacroAssemblerARM::branchDouble):
(JSC::MacroAssemblerARM::branchConvertDoubleToInt32):



Canonical link: https://commits.webkit.org/42023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50593 268f45cc-cd09-0410-ab3c-d52691b4dbfc